sbatchlog_1/slurm-1571955.out
Unable to init server: Could not connect: Connection refused
Unable to init server: Could not connect: Connection refused

(eval_runs.py:5328): Gdk-CRITICAL **: 18:42:55.137: gdk_cursor_new_for_display: assertion 'GDK_IS_DISPLAY (display)' failed
Traceback (most recent call last):
  File "scripts/train_cifar/eval/eval_runs.py", line 17, in <module>
    from lib.mli_eval.plotting.interp import plot_interp, plot_all_interp
  File "/usr/xtmp/CSPlus/VOLDNN/Annie/mli-release/lib/mli_eval/plotting/interp.py", line 172
    plt.close()"""
                 ^
SyntaxError: EOF while scanning triple-quoted string literal
